force-app/main/default/objects/Goalie_Season_Stats__c/Goalie_Season_Stats__c.object-meta.xml
<CustomObject>
    <label>Goalie Season Stats</label>
    <pluralLabel>Goalie Season Stats</pluralLabel>
    <nameField>
        <displayFormat>GSS-{0000}</displayFormat>
        <label>Goalie Season Stats Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Specialized goalie statistics for a season</description>
</CustomObject>