force-app/main/default/objects/Goalie_Season_Stats__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Goalie</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Goalie Season Stats</relationshipLabel>
    <relationshipName>Goalie_Season_Stats</relationshipName>
    <required>true</required>
    <description>The goalie these statistics belong to</description>
</CustomField>