force-app/main/default/objects/Goalie_Season_Stats__c/fields/Games_Played__c.field-meta.xml
<CustomField>
    <fullName>Games_Played__c</fullName>
    <label>Games Played</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total number of games played</description>
</CustomField>