force-app/main/default/objects/Goalie_Season_Stats__c/fields/Goals_Against_Average__c.field-meta.xml
<CustomField>
    <fullName>Goals_Against_Average__c</fullName>
    <label>Goals Against Average</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <formula
  >IF(Games_Played__c &gt; 0, Goals_Against__c / Games_Played__c, 0)</formula>
    <description>Goals against average (GAA)</description>
</CustomField>