force-app/main/default/objects/Goalie_Season_Stats__c/fields/Losses__c.field-meta.xml
<CustomField>
    <fullName>Losses__c</fullName>
    <label>Losses</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total losses</description>
</CustomField>