force-app/main/default/objects/Goalie_Season_Stats__c/fields/Save_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Save_Percentage__c</fullName>
    <label>Save Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>3</scale>
    <formula
  >IF(Saves__c + Goals_Against__c &gt; 0, Saves__c / (Saves__c + Goals_Against__c), 0)</formula>
    <description
  >Save percentage calculated as Saves / (Saves + Goals Against)</description>
</CustomField>