force-app/main/default/objects/Goalie_Season_Stats__c/fields/Saves__c.field-meta.xml
<CustomField>
    <fullName>Saves__c</fullName>
    <label>Saves</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total saves</description>
</CustomField>