force-app/main/default/objects/Goalie_Season_Stats__c/fields/Shutouts__c.field-meta.xml
<CustomField>
    <fullName>Shutouts__c</fullName>
    <label>Shutouts</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total shutouts (games with no goals against)</description>
</CustomField>