force-app/main/default/objects/Goalie_Season_Stats__c/fields/Ties__c.field-meta.xml
<CustomField>
    <fullName>Ties__c</fullName>
    <label>Ties</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total ties</description>
</CustomField>