force-app/main/default/objects/Goalie_Season_Stats__c/fields/Wins__c.field-meta.xml
<CustomField>
    <fullName>Wins__c</fullName>
    <label>Wins</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total wins</description>
</CustomField>